syntax = "proto3";

option csharp_namespace = "Proto.Library";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc LargeSayHelloResponse (HelloRequest) returns (HelloResponse);
  rpc MultipleFields (MultipleFieldsRequest) returns (MultipleFieldsResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}

message MultipleFieldsRequest {
  string prop1 = 1;
  int32 prop2 = 2;
  string prop3 = 3;
  string prop4 = 4;
  string prop5 = 5;
  string prop6 = 6;
  string prop7 = 7;
  int32 prop8 = 8;
  string prop9 = 9;
  string prop10 = 10;
}

message MultipleFieldsResponse {
  string prop1 = 1;
  int32 prop2 = 2;
  string prop3 = 3;
  string prop4 = 4;
  string prop5 = 5;
  string prop6 = 6;
  string prop7 = 7;
  int32 prop8 = 8;
  string prop9 = 9;
  string prop10 = 10;
}

